--- a/src/Spoon.AvaloniaApp/Spoon.AvaloniaApp.csproj
+++ b/src/Spoon.AvaloniaApp/Spoon.AvaloniaApp.csproj
@@ -18,4 +18,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.9.12" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.12" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Spoon\Spoon.csproj" />
+  </ItemGroup>
 </Project>
